Fixed Z-index of flash message and changed name of css sheet

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,10 @@ html {
   min-height: 100vh;
 }
 
+.flashMessage {
+  z-index: 100;
+}
+
 body {
   padding: 0;
   margin: 0;
